# silicondiff-npu-releases

./: pyproject.toml
.github/workflows/: build.yaml  publish.yaml
scripts/: install_deps.sh
